--- a/src/Component/AppBar/Appbar.css
+++ b/src/Component/AppBar/Appbar.css
@@ -1,24 +1,33 @@
-.MuiPaper-root-10{
+
+.MuiPaper-root{
     flex-direction: row !important;
     justify-content: center;
     
 }
-.MuiAppBar-colorPrimary-8{
+.MuiAppBar-colorPrimary{
     color: black !important;
     background-color: #fafafa !important;
 }
-.MuiToolbar-root-37{
+.MuiToolbar-root{
     width: 77%;
 }
-.MuiTypography-h6-58{
+.MuiTypography-h6{
     font-size : 2.2rem !important;
     font-family: 'EB Garamond', serif !important;
 }
-.MuiButton-text-79 {
+.MuiButton-text {
     padding: 6px 12px !important;
 }
-.MuiButton-root-77{
-    font-family: 'Oswald', sans-serif !important;
+.MuiButton-root{
     font-size: 1rem !important;
+    font-family: 'Oswald', sans-serif !important;
     letter-spacing: 1px;
 }
+@media (max-width:431px){
+    .MuiTypography-h6{
+        font-size : 1rem !important;
+    }
+    .MuiButton-root{
+        font-size: 0.8rem !important;
+    }
+} 
