--- a/src/Component/Homepage/Home.css
+++ b/src/Component/Homepage/Home.css
@@ -14,3 +14,59 @@
     transform: translate(-50%, -50%);
     color: white;
   }
+  .ourStory-Container{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
+  .headingOurstory{
+    margin-bottom: 0px;
+    text-align: center;
+    font-size: 2.82rem;
+    font-family: 'EB Garamond', serif;
+  }
+  .Ourstory-paragraph{
+    font-style: italic;
+    text-align: center;
+    font-size: 30px;
+  }
+  .btn-div{
+    display: flex;
+    justify-content: space-between;
+    width: 75%;
+  }
+  .btn-bidnow-tender{
+    padding: 76px 55px !important;
+    font-size: 20px !important;
+    font-weight: 700 !important;
+    cursor: pointer;
+    background-color: white !important;
+    transition: all 2s;
+    font-family: 'Garamond', sans-serif !important;
+    border-radius: 10px !important;
+  } 
+  .btn-bidnow-tender:hover{
+    background-color: rgb(205, 223, 255) !important;
+  }
+  .line{
+    margin: 82px;
+    margin-bottom: 0px;
+    border: 1px solid #a5dda5;
+  }
+  @media (max-width : 730px){
+    .btn-div{
+      width: 90%;
+    }
+  }
+  @media (max-width : 730px){
+    .btn-div{
+      flex-direction: column;
+      height: 315px;
+    }
+    .btn-bidnow-tender{
+        padding: 50px 0px !important;
+    }
+  }
+
+  
