--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,10 @@
-.userName{
-  font-size: 14px;
-  font-weight: 600;
+body{
+  font-family: "Calibri";
 }
-.postTime{
-  font-size: 10px;
-  font-weight: 600;
-}
-.caption{
-  font-size: 10px;
-  font-weight: bold;
-  font-family: Arial, sans-serif;
-}
-.emojiDiv{
-  background: #e0d1d1;
-  width: 230px;
-  transform: translate(-56px,-35px);
-  border-radius: 50px;
-  justify-content: center;
-  visibility: hidden;
-  transition: all 1s ease-in-out;
-}
-.show{
-   visibility: visible;
-}
-.MainDiv{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 50px;
+*{
+  font-family: "Calibri";
 }
 #root{
+  font-family: "Calibri";
   background: #ece8e8;
 }
