--- a/src/Component/Opentender/opentender.css
+++ b/src/Component/Opentender/opentender.css
@@ -33,3 +33,17 @@
     font-weight: 600;
     font-size: 15px;
 }
+@media (max-width : 1070px){
+    .openTenderFeilds{
+      width: 100%;
+    }
+  }
+@media (max-width : 914px){
+    .formDiv{
+      flex-direction: column;
+      align-items: center
+    }
+    .openTenderFeilds{
+        height: auto;
+    }
+  }
